--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <a href="index.html">
       <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
     </a>
-    <nav class="site-nav-list">
-      <ul>
+  <div class="site-header-actions">
+    <nav>
+      <ul class="sitenav-list">
         <li><a class="sitenav-link" href='#'>Bosh sahifa</a></li>
         <li><a class="sitenav-link" href='#'>Kitoblar</a></li>
         <li><a class="sitenav-link" href='#'>Aksiyalar</a></li>
@@ -27,6 +28,7 @@
       </ul>
     </nav>
     <a class="main-link" href='#'>Ro'yxatdan o'tish</a>
+  </div>
   </header>
 
 
