--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. <br> Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
         <a class="main-link" href="#">Buyurtma berish</a>
       </div>
-      <img src="img/python-book.jpg" alt="Python Dasturlash Asoslar kitobi" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
+      <img class="hero-img" src="img/python-book.jpg" alt="Python Dasturlash Asoslar kitobi" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
     </section>
 
     <!-- FEATURES -->
@@ -138,3 +138,5 @@
     </footer>
 </body>
 </html>
+
+<!-- Murodjon -->
