--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <div class="site-header-actions">
     <nav>
       <ul class="sitenav-list">
-        <li><a class="sitenav-link" href='#'>Bosh sahifa</a></li>
-        <li><a class="sitenav-link" href='#'>Kitoblar</a></li>
-        <li><a class="sitenav-link" href='#'>Aksiyalar</a></li>
-        <li><a class="sitenav-link" href='#'>Kontaktlar</a></li>
+        <li class="sitenav-item"><a class="sitenav-link" href='#'>Bosh sahifa</a></li>
+        <li class="sitenav-item"><a class="sitenav-link" href='#'>Kitoblar</a></li>
+        <li class="sitenav-item"><a class="sitenav-link" href='#'>Aksiyalar</a></li>
+        <li class="sitenav-item"><a class="sitenav-link" href='#'>Kontaktlar</a></li>
       </ul>
     </nav>
     <a class="main-link" href='#'>Ro'yxatdan o'tish</a>
@@ -75,8 +75,10 @@
       <div class="promo-content">
         <h2 class="promo-heading">Bolalar kitoblari uchun
           ajoyib aksiya!</h2>
+        <div class="prom-info-wrapper">
           <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
           <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta kitob</strong>ni <strong class="promo-highlight">350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        </div>
           <a class="main-link" href="#">Buyurtma berish</a>
       </div>
       <img class="promo-img" src="img/sale-img.jpg" alt="Ustma-ust tahlangan kitoblar" width="440" height="440" srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
