--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
 
   <!-- HEADING -->
   <header class="site-header">
-    <a class="logo-link" href="index.html">
-      <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
-    </a>
-  <div class="site-header-actions">
-    <nav>
-      <ul class="sitenav-list">
-        <li class="sitenav-item"><a class="sitenav-link" href='#'>Bosh sahifa</a></li>
-        <li class="sitenav-item"><a class="sitenav-link" href='#'>Kitoblar</a></li>
-        <li class="sitenav-item"><a class="sitenav-link" href='#'>Aksiyalar</a></li>
-        <li class="sitenav-item"><a class="sitenav-link" href='#'>Kontaktlar</a></li>
-      </ul>
-    </nav>
-    <a class="main-link" href='#'>Ro'yxatdan o'tish</a>
-  </div>
+    <div class="site-header-container container">
+      <a class="logo-link" href="index.html">
+        <img src="img/logo.svg" alt="Akademnashr logo" width="227" height="60">
+      </a>
+    <div class="site-header-actions">
+      <nav>
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a class="sitenav-link" href='#'>Bosh sahifa</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href='#'>Kitoblar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href='#'>Aksiyalar</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href='#'>Kontaktlar</a></li>
+        </ul>
+      </nav>
+      <a class="main-link" href='#'>Ro'yxatdan o'tish</a>
+    </div>
+    </div>
   </header>
 
 
