--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
+  <title>Document</title>
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300;1,400&family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
